[gd_scene load_steps=2 format=2]

[ext_resource path="res://Card.gd" type="Script" id=1]

[node name="Card" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -40.0
margin_top = -76.0
margin_right = 68.0
margin_bottom = 83.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = -23.0
margin_top = -10.0
margin_right = 42.0
margin_bottom = 21.0
rect_scale = Vector2( 2, 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Error
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToolTip" type="Node2D" parent="."]
visible = false
position = Vector2( 2, 0 )

[node name="Rect" type="ColorRect" parent="ToolTip"]
margin_right = 145.0
margin_bottom = 133.0
color = Color( 0.701961, 0.717647, 0.427451, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="ToolTip/Rect"]
margin_left = -2.0
margin_right = 142.0
margin_bottom = 121.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Tooltip"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="ColorRect" to="." method="_on_ColorRect_mouse_entered"]
[connection signal="mouse_exited" from="ColorRect" to="." method="_on_ColorRect_mouse_exited"]
